@@ -6,6 +6,9 @@
 
 RELEASE 2.3.2.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From veon on bitbucket:
+    - Fixed handling of nested ifs in CPP scanner PreProcessor class.
+
   From Michael Haubenwallner:
     - Respect user's CC/CXX values; don't always overwrite in generate()
     - Delegate linker Tool.exists() to CC/CXX Tool.exists().
